5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1596_1015.log
== TEST (2019-04-02 01:41:39) 
-- CODE:
a=int(input("valor1"))
b=int(input("valor2"))
c=int(input("valor3"))
min(a,b,c)
max(a,b,c)
print(a,b,c)
-- OUTPUT:
10 -2 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:41:51) 
-- CODE:
a=int(input("valor1"))
b=int(input("valor2"))
c=int(input("valor3"))
min(a,b,c)
max(a,b,c)
print(a,b,c)
-- EXECUTION TIME:
0.169838
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10 -2 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:41:57) 
-- CODE:
a=int(input("valor1"))
b=int(input("valor2"))
c=int(input("valor3"))
min(a,b,c)
max(a,b,c)
print(a,b,c)
-- OUTPUT:
10 -2 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:43:57) 
-- CODE:
a=int(input("valor1"))
b=int(input("valor2"))
c=int(input("valor3"))
print(max(a,b,c))
print(min(a,b,c))
-- OUTPUT:
10
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:44:12) 
-- CODE:
a=int(input("valor1"))
b=int(input("valor2"))
c=int(input("valor3"))
print(max(a,b,c))
print(min(a,b,c))
-- EXECUTION TIME:
0.230949
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:44:29) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(min(a,b,c))
-- OUTPUT:
10
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:48:22) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(min(a,b,c))
inter=a+b+c
inter1=max - min
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    inter1=max - min
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:48:44) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(min(a,b,c))
inter=a+b+c

-- OUTPUT:
10
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:46:26) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(min(a,b,c))


-- OUTPUT:
10
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:48:46) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(min(a,b,c))


-- OUTPUT:
10
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:50:02) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(a+b+c)
print(min(a,b,c))


-- OUTPUT:
10
8
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:50:11) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(a+b+c)
print(min(a,b,c))


-- EXECUTION TIME:
0.170445
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
8
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:50:57) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(a+b+c)max(a,b,c)-min(a,b,c)
print(min(a,b,c))


-- ERROR:
File "XXXX", line 5
    print(a+b+c)max(a,b,c)-min(a,b,c)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:51:10) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(a+b+c)
max(a,b,c)-min(a,b,c)
print(min(a,b,c))


-- OUTPUT:
10
8
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:51:16) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))
print(a+b+c)
max(a,b,c)-min(a,b,c)
print(min(a,b,c))


-- OUTPUT:
10
8
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:03) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))
print(max(a,b,c))

print (a+b+c)
print (max(a,b,c)-min(a,b,c))
print (min(a,b,c))


-- OUTPUT:
10
8
12
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:27) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(max(a,b,c))
print (max(a,b,c)-min(a,b,c))
print (min(a,b,c))


-- OUTPUT:
10
12
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:52:32) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(max(a,b,c))
print (max(a,b,c)-min(a,b,c))
print (min(a,b,c))


-- EXECUTION TIME:
0.217481
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
12
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:52:36) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(max(a,b,c))
print (max(a,b,c)-min(a,b,c))
print (min(a,b,c))


-- OUTPUT:
10
12
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:53:19) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(max(a,b,c))
print (min(a,b,c)-max(a,b,c))
print (min(a,b,c))


-- OUTPUT:
10
-12
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:53:27) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(max(a,b,c))
print (min(a,b,c)-max(a,b,c))
print (min(a,b,c))


-- EXECUTION TIME:
0.129315
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
10
-12
-2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:53:28) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(max(a,b,c))
print (min(a,b,c)-max(a,b,c))
print (min(a,b,c))


-- OUTPUT:
10
-12
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:53:48) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(max(a,b,c))
print ((a+b+c)+min(a,b,c)-max(a,b,c))
print (min(a,b,c))


-- OUTPUT:
10
-4
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:54:10) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(max(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print (min(a,b,c))


-- OUTPUT:
10
0
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:54:20) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print(max(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print (min(a,b,c))


-- OUTPUT:
10
0
-2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:55:09) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))


-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:55:17) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))


-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:55:24) 
-- CODE:
a=int(input("valor"))
b=int(input("valor"))
c=int(input("valor"))

print (min(a,b,c))
print ((a+b+c)-min(a,b,c)-max(a,b,c))
print(max(a,b,c))


-- EXECUTION TIME:
0.115704
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
